--- a/style.css
+++ b/style.css
@@ -1,30 +1,70 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: 14px;
 }
 
+h1{
+
+}
+
+h2 {
+    font-size: 16px;
+    font-weight: 800;
+}
+
 .menu_item{
     margin: 20px;
+    max-width: 500px;
+    background-color: lightgray;
+    
 }
 
 .menu_item, .menu_title{
     border: 2px solid black;
+    
+    
 }
 
 .menu_title{
     width: 150px;
-    height: 50px;
+    height: 40px;
+    padding-top: 0px;
     float: right;
     text-align: center;
+    
+    
 }
+
+.menu_title > h2{
+    width: 150px;
+    height: 40px;
+    margin-top: 10px;
+    float: right;
+    text-align: center;
+    vertical-align: middle;
+}
+
 #title_chicken{
     background-color: salmon;
+    
 }
 
 #title_beef{
     background-color: brown;
+    color:white;
 }
 
 #title_sushi{
     background-color: burlywood;
+    clear:both;
+}
+
+.menu_text > p{
+    padding: 10px 10px 10px 10px;
+    clear:both;
+    
 }
