--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
 }
 
 h1{
-
+    text-align:center;
+    font-size: 22px;
 }
 
 h2 {
@@ -19,14 +20,11 @@ h2 {
 .menu_item{
     margin: 20px;
     max-width: 500px;
-    background-color: lightgray;
-    
+    background-color: lightgray;   
 }
 
 .menu_item, .menu_title{
     border: 2px solid black;
-    
-    
 }
 
 .menu_title{
@@ -35,8 +33,6 @@ h2 {
     padding-top: 0px;
     float: right;
     text-align: center;
-    
-    
 }
 
 .menu_title > h2{
@@ -50,7 +46,6 @@ h2 {
 
 #title_chicken{
     background-color: salmon;
-    
 }
 
 #title_beef{
@@ -66,5 +61,4 @@ h2 {
 .menu_text > p{
     padding: 10px 10px 10px 10px;
     clear:both;
-    
 }
