--- a/style.css
+++ b/style.css
@@ -17,15 +17,29 @@ h2 {
     font-weight: 800;
 }
 
+/*
+@media (min-width: 100px) and (max-width: 200px) {
+
+}
+*/
+
 .menu_item{
     margin: 20px;
     max-width: 500px;
     background-color: lightgray;   
+    position: relative;
+	float: left;
 }
 
-.menu_item, .menu_title{
+.menu_item{
     border: 2px solid black;
 }
+
+.menu_title{
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+}
+
 
 .menu_title{
     width: 150px;
